tests/typechecker/pass/007-ascription.hyg
(if ((2 < 3) or (4 = 2)) then 4.0f else 1.0f): float
