tests/typechecker/fail/007-ascription.hyg
(if (not (2 = 3)) then 4.0f else 1.0f): bool
